# akuna-embed

./: Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: release.yml
scripts/: check.sh  reference_embeddings.py
src/: bert.rs  lib.rs  mpnet.rs  xlm_roberta.rs
test-corpus/: test-multilingual.txt
